--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 
+repositories {
+    mavenCentral()
+}
+
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
@@ -38,7 +42,7 @@ android {
     }
 }
 
-def appcompatVersion="22.2.0"
+def appcompatVersion="22.2.1"
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -66,9 +70,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.github.bumptech.glide:okhttp-integration:1.3.0'
 
-    //reactive
-    compile 'io.reactivex:rxjava:1.0.10'
-    compile 'io.reactivex:rxandroid:0.24.0'
+    // reactive
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.trello:rxlifecycle:0.1.0'
+    compile 'com.trello:rxlifecycle-components:0.1.0'
 
     //debug
     compile 'com.jakewharton.timber:timber:3.1.0'
