--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
     //kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+//    compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
 
     //Dagger 2
     compile 'com.google.dagger:dagger:2.0.1'
