--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 
 repositories {
@@ -39,7 +38,10 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        debug.java.srcDirs += 'src/debug/kotlin'
+        release.java.srcDirs += 'src/release/kotlin'
         local.java.srcDirs += 'src/local/kotlin'
+        product.java.srcDirs += 'src/product/kotlin'
     }
 }
 
@@ -58,7 +60,7 @@ dependencies {
 
     //Dagger 2
     compile 'com.google.dagger:dagger:2.0.1'
-    apt 'com.google.dagger:dagger-compiler:2.0.1'
+    kapt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     //data
@@ -90,4 +92,8 @@ dependencies {
 
     //ui
     compile 'jp.satorufujiwara:recyclerview-binder:1.2.0'
+}
+
+kapt {
+    generateStubs = true
 }
