--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     //kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+    compile('com.jakewharton:kotterknife:0.1.0-SNAPSHOT')
 
     //Dagger 2
     compile 'com.google.dagger:dagger:2.0.1'
@@ -90,7 +90,7 @@ dependencies {
     }
 
     //ui
-    compile 'jp.satorufujiwara:recyclerview-binder:1.2.2'
+    compile 'jp.satorufujiwara:recyclerview-binder:1.3.0'
 }
 
 kapt {
