--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-kotlinVersion=1.0.0-rc-1036
+kotlinVersion=1.0.0
