--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -45,7 +45,9 @@ android {
     }
 }
 
-def appcompatVersion="23.1.1"
+def appcompatVersion = "23.2.0"
+def rxBindingVersion = "0.4.0"
+def rxLifecycleVersion = "0.5.0"
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -74,10 +76,17 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp-integration:1.3.1'
 
     // reactive
-    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.2'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.trello:rxlifecycle:0.3.0'
-    compile 'com.trello:rxlifecycle-components:0.3.0'
+    compile "com.trello:rxlifecycle:$rxLifecycleVersion"
+    compile "com.trello:rxlifecycle-components:$rxLifecycleVersion"
+    compile "com.trello:rxlifecycle-kotlin:$rxLifecycleVersion"
+    compile "com.jakewharton.rxbinding:rxbinding-kotlin:$rxBindingVersion"
+    compile "com.jakewharton.rxbinding:rxbinding-support-v4-kotlin:$rxBindingVersion"
+    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7-kotlin:$rxBindingVersion"
+    compile "com.jakewharton.rxbinding:rxbinding-recyclerview-v7-kotlin:$rxBindingVersion"
+    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+    compile 'com.squareup.sqlbrite:sqlbrite:0.6.2'
 
     //debug
     compile 'com.jakewharton.timber:timber:4.0.1'
